<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/wallpaper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.9">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/colorPrimary"
            android:gravity="center"
            android:textSize="40sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_RegisterUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:alpha="0.5"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@color/colorPrimaryVariant"
            android:hint="@string/username">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_RegisterUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_RegisterPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:alpha="0.5"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@color/colorPrimaryVariant"
            app:passwordToggleEnabled="true"
            android:hint="@string/password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_RegisterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_RegisterRepeatPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/colorPrimaryVariant"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:alpha="0.5"
            android:layout_margin="10dp"
            app:passwordToggleEnabled="true"
            android:hint="@string/repeat_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_RegisterRepeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_RegisterEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:alpha="0.5"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@color/colorPrimaryVariant"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_RegisterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_RegisterName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:alpha="0.5"
            android:layout_margin="10dp"
            app:boxBackgroundColor="@color/colorPrimaryVariant"
            android:hint="@string/name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_RegisterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout_RegisterSurname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:alpha="0.5"
            app:boxBackgroundColor="@color/colorPrimaryVariant"
            android:layout_margin="10dp"
            android:hint="@string/surname">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editText_RegisterSurname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_RegisterDate"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:background="@color/colorPrimaryVariant"
            android:gravity="left"
            android:text="@string/date"
            android:alpha="0.5"/>

        <Spinner
            android:id="@+id/spinner_RegisterGendre"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_margin="10dp"
            android:background="@color/colorPrimaryVariant"
            android:alpha="0.5"
            android:entries="@array/pronouns" />
        
        <com.google.android.material.checkbox.MaterialCheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/accept_termps_and_conditions"
            android:textColor="@color/colorPrimary"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_Register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/register"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_Login"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/login"
            android:textStyle="bold" />


    </LinearLayout>

</ScrollView>